[gd_scene load_steps=16 format=2]

[ext_resource path="res://art/monster.png" type="Texture" id=1]
[ext_resource path="res://Monster.gd" type="Script" id=2]
[ext_resource path="res://art/monster_unst.png" type="Texture" id=3]
[ext_resource path="res://sounds/awake.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/Hit_Hurt.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "unst",
"speed": 18.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5.58864, 3.79166 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 9.08488, 15.5171 )

[node name="Monster" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 8 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.86398 )
shape = SubResource( 9 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, -15.5609 )
shape = SubResource( 10 )

[node name="change_dir" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="unstable" type="Timer" parent="."]
one_shot = true

[node name="difficulty" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="sounds" type="Node" parent="."]

[node name="hit" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 5 )
volume_db = -6.0

[node name="awake" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="change_dir" to="." method="_on_change_dir_timeout"]
[connection signal="timeout" from="unstable" to="." method="_on_unstable_timeout"]
[connection signal="timeout" from="difficulty" to="." method="_on_difficulty_timeout"]
